--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
 	"name": "synerex-client-for-vscode",
 	"displayName": "Synerex Client for VSCode",
 	"description": "Synerex Client for Visual Studio Code",
+	"publisher": "ngtystr",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nagata-yoshiteru/synerex-client-for-vscode"
+	},
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.45.0"
@@ -10,42 +15,57 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:synerex-client-for-vscode.helloWorld",
-		"onCommand:synerex-client-for-vscode.start",
+		"onCommand:synerexClient.start",
 		"workspaceContains:**/.synerex"
 	],
 	"main": "./extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "synerex-client-for-vscode.helloWorld",
-				"title": "Hello World"
-			},
-			{
-				"command": "synerex-client-for-vscode.start",
+				"command": "synerexClient.start",
 				"title": "Start Synerex"
 			}
 		],
 		"configuration": {
 			"title": "Synerex Client",
 			"properties": {
-			  "synerexClient.launchOnWindowOpen": {
-				"type": "boolean",
-				"default": false,
-				"description": "If enabled, launch Synerex Server and Node Server on VSCode window open."
-			  },
-			  "synerexClient.synerexServer": {
-				"type": ["string", "null"],
-				"default": null,
-				"description": "Specifies the path to Synerex Server."
-			  },
-			  "synerexClient.nodeServer": {
-				"type": ["string", "null"],
-				"default": null,
-				"description": "Specifies the path to Node Server."
-			  }
+				"synerexClient.launchOnWindowOpen": {
+					"type": "boolean",
+					"default": false,
+					"description": "If enabled, launch Synerex Server and Node Server on VSCode window open."
+				},
+				"synerexClient.synerexServer": {
+					"type": [
+						"string",
+						"null"
+					],
+					"default": null,
+					"description": "Specifies the path to Synerex Server."
+				},
+				"synerexClient.nodeServer": {
+					"type": [
+						"string",
+						"null"
+					],
+					"default": null,
+					"description": "Specifies the path to Node Server."
+				}
 			}
-		}
+		},
+		"taskDefinitions": [
+			{
+				"type": "synerexClient.synerexServer",
+				"presentation": {
+					"group": "Synerex Client"
+				}
+			},
+			{
+				"type": "synerexClient.synerexServer",
+				"presentation": {
+					"group": "Synerex Client"
+				}
+			}
+		]
 	},
 	"scripts": {
 		"lint": "eslint .",
@@ -53,15 +73,14 @@
 		"test": "node ./test/runTest.js"
 	},
 	"devDependencies": {
-        "@types/vscode": "^1.45.0",
-        "@types/glob": "^7.1.1",
-        "@types/mocha": "^7.0.2",
-        "@types/node": "^13.11.0",
-        "eslint": "^6.8.0",
-        "glob": "^7.1.6",
+		"@types/vscode": "^1.45.0",
+		"@types/glob": "^7.1.1",
+		"@types/mocha": "^7.0.2",
+		"@types/node": "^13.11.0",
+		"eslint": "^6.8.0",
+		"glob": "^7.1.6",
 		"mocha": "^7.1.2",
-        "typescript": "^3.8.3",
-        "vscode-test": "^1.3.0"
-    }
-
+		"typescript": "^3.8.3",
+		"vscode-test": "^1.3.0"
+	}
 }
