--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
 		"commands": [
 			{
 				"command": "synerexClient.start",
-				"title": "Start Synerex"
+				"title": "Start Synerex Client"
+			},
+			{
+				"command": "synerexClient.startSynerex",
+				"title": "Start Synerex Server"
+			},
+			{
+				"command": "synerexClient.startNode",
+				"title": "Start Node Server"
 			}
 		],
 		"configuration": {
@@ -54,16 +62,10 @@
 		},
 		"taskDefinitions": [
 			{
-				"type": "synerexClient.synerexServer",
-				"presentation": {
-					"group": "Synerex Client"
-				}
+				"type": "synerexClient.synerexServer"
 			},
 			{
-				"type": "synerexClient.synerexServer",
-				"presentation": {
-					"group": "Synerex Client"
-				}
+				"type": "synerexClient.nodeServer"
 			}
 		]
 	},
@@ -73,14 +75,17 @@
 		"test": "node ./test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.45.0",
 		"@types/glob": "^7.1.1",
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.11.0",
+		"@types/vscode": "^1.45.0",
 		"eslint": "^6.8.0",
 		"glob": "^7.1.6",
 		"mocha": "^7.1.2",
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
+	},
+	"dependencies": {
+		"simple-tcpscan": "^1.0.0"
 	}
 }
