--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"onCommand:synerexClient.start",
 		"workspaceContains:**/.synerex"
 	],
-	"main": "./extension.js",
+	"main": "./dist/extension",
 	"contributes": {
 		"commands": [
 			{
@@ -72,7 +72,11 @@
 	"scripts": {
 		"lint": "eslint .",
 		"pretest": "yarn run lint",
-		"test": "node ./test/runTest.js"
+		"test": "node ./test/runTest.js",
+		"vscode:prepublish": "webpack --mode production || echo webpack-fail",
+		"webpack": "webpack --mode development",
+		"webpack-dev": "webpack --mode development --watch",
+		"test-compile": "tsc -p ./"
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
@@ -83,10 +87,12 @@
 		"glob": "^7.1.6",
 		"mocha": "^7.1.2",
 		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0"
+		"vscode-test": "^1.3.0",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.11"
 	},
 	"dependencies": {
-		"download-git-repo": "^3.0.2",
+		"git-clone": "^0.1.0",
 		"simple-tcpscan": "^1.0.0"
 	}
 }
