--- a/.vscodeignore
+++ b/.vscodeignore
@@ -7,6 +7,7 @@ vsc-extension-quickstart.md
 **/*.map
 **/.eslintrc.json
 synerex_server/
+synerex_nodeserv/
 nodeinfo.json
 sxprofile.json
 webpack.config.js
