--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,15 @@ env:
   NODE_VERSION: 10.x
 
 on:
-  push:
-    branches:
-    - master
+  release:
+    types:
+    - created
 
 jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -25,3 +25,8 @@ jobs:
       uses: GabrielBB/xvfb-action@v1.2
       with:
         run: yarn test
+    - name: Publish
+      if: success() && (startsWith( github.ref, 'refs/tags/releases/') || startsWith( github.ref, 'refs/tags/v')) && matrix.os == 'ubuntu-latest'
+      run: vsce publish --yarn --pat ${{ secrets.VSCE_PAT }}
+      env:
+        VSCE_PAT: $
