--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,6 @@ jobs:
         run: yarn test
     - name: Publish
       if: success() && (startsWith( github.ref, 'refs/tags/releases/') || startsWith( github.ref, 'refs/tags/v')) && matrix.os == 'ubuntu-latest'
-      run: vsce publish --yarn --pat ${{ secrets.VSCE_PAT }}
+      run: yarn deploy
       env:
-        VSCE_PAT: $
+        VSCE_PAT: ${{ secrets.VSCE_PAT }}
